--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                          <div class="select__button">
                             <p id="select">Все</p>
                             <img
-                               src="/img/icons/arrow.svg"
+                               src="./img/icons/arrow.svg"
                                alt=""
                             />
                          </div>
